--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,18 @@
 Patrice Mandin <pmandin -at- caramail -dot- com>
-http://pmandin.atari.org/
+  http://pmandin.atari.org/
+
+Extra parts:
+
+- LZW depacker
+Scummvm project
+  http://www.scummvm.org/
+
+- MDEC depacker
+Bero
+  http://www.pcsx.net/
+Psxdev project
+  http://www.nobis-crew.org/psxdev/
+
+- VLC depacker
+Psxdev project
+  http://www.nobis-crew.org/psxdev/
