--- a/AUTHORS
+++ b/AUTHORS
@@ -8,7 +8,7 @@ Scummvm project
   http://www.scummvm.org/
 
 - MDEC depacker
-Bero
+PCSX
   http://www.pcsx.net/
 Psxdev project
   http://www.nobis-crew.org/psxdev/
@@ -16,3 +16,7 @@ Psxdev project
 - VLC depacker
 Psxdev project
   http://www.nobis-crew.org/psxdev/
+
+- Fast IDCT
+Independent JPEG Group's software
+  http://www.ijg.org/
