--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
-v 0.1
+v 0.2
 
-- First release
+- Replaced all filesystems access by Physfs library, also used to access
+  Resident Evil 3 rofs<n>.dat archives.
+
+
+See ChangeLog for older changes.
