--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+v 0.2
+
+- Replaced all filesystems access by Physfs library, also used to access
+  Resident Evil 3 rofs<n>.dat archives.
+
 v 0.1
 
 - First release
