--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,6 @@
-v 0.2
+v 0.3
 
-- Replaced all filesystems access by Physfs library, also used to access
-  Resident Evil 3 rofs<n>.dat archives.
+- Don't reload image if switching between fullscreen and windowed.
 
 
 See ChangeLog for older changes.
