--- a/README
+++ b/README
@@ -76,6 +76,7 @@ Resident Evil, PS1, Demo
 Resident Evil, PS1, Game, PAL
 Resident Evil, PC, Game
 Resident Evil 2, PS1, Demo
+Resident Evil 2, PS1, Game, PAL
 Resident Evil 2, PC, Demo
 Resident Evil 3, PS1, Game, PAL
 Resident Evil 3, PC, Demo
