--- a/README
+++ b/README
@@ -78,8 +78,13 @@ Resident Evil, PC, Game
 Resident Evil 2, PS1, Demo
 Resident Evil 2, PS1, Game, PAL
 Resident Evil 2, PC, Demo
+Resident Evil 2, PC, Game
 Resident Evil 3, PS1, Game, PAL
 Resident Evil 3, PC, Demo
+
+Missing:
+- Resident Evil 3, PC, Game
+- other consoles versions
 
 Note:
 
