Add movie player

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ v 0.4
 
 - Added Resident Evil 2, PS1, Game.
 - Added Resident Evil 2, PC, Game.
+- Preliminary movie player using ffmpeg library.
 
 v 0.3
 
