Ajout re3, pc, jeu

--- a/README
+++ b/README
@@ -86,9 +86,9 @@ Resident Evil 2, PC, Demo
 Resident Evil 2, PC, Game
 Resident Evil 3, PS1, Game, PAL
 Resident Evil 3, PC, Demo
+Resident Evil 3, PC, Game
 
 Missing:
-- Resident Evil 3, PC, Game
 - other consoles versions
 
 Note:
