re2 ps1 demo pal, free cpu

--- a/README
+++ b/README
@@ -77,10 +77,11 @@ V		reset camera
 4 Supported games
 -----------------
 
-Resident Evil, PS1, Demo
+Resident Evil, PS1, Demo, NTSC
 Resident Evil, PS1, Game, PAL
 Resident Evil, PC, Game
-Resident Evil 2, PS1, Demo
+Resident Evil 2, PS1, Demo, NTSC
+Resident Evil 2, PS1, Demo, PAL
 Resident Evil 2, PS1, Game, PAL
 Resident Evil 2, PC, Demo
 Resident Evil 2, PC, Game
