--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 v 0.5
 
+- Do not refresh screen as fast as possible, and free cpu instead.
+- Added Resident Evil 2, PS1, Demo, Pal.
 - Added Resident Evil 3, PC, Game.
 
 v 0.4
