--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@ v 0.5
 - Do not refresh screen as fast as possible, and free cpu instead.
 - Added Resident Evil 2, PS1, Demo, Pal.
 - Added Resident Evil 3, PC, Game.
+- Re2PcDemo: Load room description to know how many cameras there are.
+- Re1PcGame: Load room description to know how many cameras there are.
 
 v 0.4
 
