--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,11 @@
 v 0.5
 
+- Do not refresh screen as fast as possible, and free cpu instead.
+- Added Resident Evil 2, PS1, Demo, Pal.
 - Added Resident Evil 3, PC, Game.
+- Load room description to know how many cameras there are.
+- configure.ac reworked to use pkg-config for FFmpeg libraries.
+- Started writing OpenGL renderer.
 
 
 See ChangeLog for older changes.
