--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ v 0.6
 - There are two different demos of Resident Evil 2 for PC.
 - Try to deal with screen aspect ratio if possible.
 - Separated OpenGL and software renderer.
-
+- Software renderer: rescale background to match window size.
 
 v 0.5
 
