--- a/README
+++ b/README
@@ -44,8 +44,7 @@ Use at your own risks.
 
 "-movie" to enable movie player mode.
 
-"-opengl" to enable OpenGL renderer. Note: in this mode, a grid is displayed
-  to show camera position.
+"-opengl" to enable OpenGL renderer.
 
 "-aspect <x>:<y>" to force an aspect ratio if misdetected.
 
