--- a/README
+++ b/README
@@ -84,6 +84,7 @@ F		previous camera
 V		reset camera
 
 G		toggle grid display
+Arrow keys	Move model (only for RE2 pc demo currently)
 
 
 4 Supported games
