--- a/README
+++ b/README
@@ -97,6 +97,7 @@ Resident Evil, PS1, Game, PAL
 Resident Evil, PC, Game
 Resident Evil 2, PS1, Demo, NTSC
 Resident Evil 2, PS1, Demo, PAL
+Resident Evil 2, PS1, Demo, PAL from Playstation Magazine, CD 21
 Resident Evil 2, PS1, Game, PAL
 Resident Evil 2, PC, Demo
 Resident Evil 2, PC, Game
