--- a/README
+++ b/README
@@ -90,7 +90,7 @@ B		reset model
 Y		toggle grid display
 H		toggle background restoration display
 SPACE		refresh background, move player at current camera position
-Arrow keys	Move player (only for RE2 pc demo currently)
+Arrow keys	Move player (only for RE1 and RE2 currently)
 Pageup/down	Move player up/down (Atari: use ClrHome/Insert)
 
 4 Supported games
