--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 v 0.9
 
-- Display EMD model also for RE1 (pc/ps1)
+- Display EMD model also for RE1 (pc/ps1), RE2 (pc/ps1) and RE3 pc.
+- Model selection
 - Move model up/down
 - Fixed crash in OpenGL renderer, due to bad conversion of background image.
 
