--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ v 0.10
 - Texturing for models.
 - Switchable wireframe/filled/textured for model drawing.
 - 64 bits fixes for camera position.
+- Software renderer: filled polygons.
 
 v 0.9
 
