--- a/README
+++ b/README
@@ -102,16 +102,14 @@ Pageup/down	Move player up/down (Atari: use ClrHome/Insert)
 4 Supported games
 -----------------
 
-Resident Evil, PS1, Demo, NTSC
-Resident Evil, PS1, Game, PAL
+Resident Evil, PS1, Demo
+Resident Evil, PS1, Game
 Resident Evil, PC, Game
-Resident Evil 2, PS1, Demo, NTSC
-Resident Evil 2, PS1, Demo, PAL from CD Consoles 38
-Resident Evil 2, PS1, Demo, PAL from Playstation Magazine, CD 21
-Resident Evil 2, PS1, Game, PAL
+Resident Evil 2, PS1, Demo
+Resident Evil 2, PS1, Game
 Resident Evil 2, PC, Demo
 Resident Evil 2, PC, Game
-Resident Evil 3, PS1, Game, PAL
+Resident Evil 3, PS1, Game
 Resident Evil 3, PC, Demo
 Resident Evil 3, PC, Game
 
