--- a/AUTHORS
+++ b/AUTHORS
@@ -31,3 +31,7 @@ http://www.lighthouse3d.com/opengl/viewfrustum/
 
 - Game state independent of frame rate
 http://gafferongames.wordpress.com/game-physics/fix-your-timestep/
+
+- S-buffer rendering
+Paul Nettle
+http://www.gamedev.net/reference/articles/article668.asp
