--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 v 0.11
 
-- Received contribution to add more PS1 versions.
+- Received contribution to add more PS1 versions, thanks to Mark Grass.
 - Reworked detection of game/demo versions.
-- Preliminary S-Buffer implementation for software renderer.
+- S-Buffer implementation for software renderer.
 
 v 0.10
 
