--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ v 0.12
 - Added room map with camera, camera switches and boundaries.
 - OpenGL: Disabled ARB_npot texture support, till testable.
 - OpenGL: Only upload texture to video card when loading model.
+- Camera switches, and boundary checks for player movement.
 
 
 See ChangeLog for older changes.
