--- a/README
+++ b/README
@@ -95,7 +95,10 @@ B		reset model
 
 Y		toggle grid display
 H		toggle background restoration display
-N		toggle map display (white: camera, orange: camera switch, red: boundary)
+N		toggle map display (white: camera, orange: camera switch,
+		red: boundary, green arrow: you). Camera switches are enabled.
+		Boundary checks are enabled only if map displayed (in case you
+		are stuck because of bugs).
 
 SPACE		refresh background, move player at current camera position
 Arrow keys	Move player
