--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
 v 0.13
 
+- Dump room initialization script (see -dumpscript command).
+- Display doors and walls on map.
+- Can enter doors.
+
 
 See ChangeLog for older changes.
