Dump all scripts, execute only init one

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,11 @@
 Patrice Mandin <patmandin@gmail.com>
   http://pmandin.atari.org/
 
+Wiki pages about file formats reverse engineering:
+  http://rewiki.regengedanken.de/wiki/Resident_Evil
+  http://rewiki.regengedanken.de/wiki/Resident_Evil_2
+  http://rewiki.regengedanken.de/wiki/Resident_Evil_3
+
 Extra parts:
 
 - LZW depacker
