--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 v 0.13
 
-- Dump room initialization script (see -dumpscript command).
+- Dump room scripts (see -dumpscript command).
 - Display doors and walls on map.
-- Can enter doors.
+- Can enter doors (only RE2/RE3).
 
 
 See ChangeLog for older changes.
