--- a/README
+++ b/README
@@ -111,6 +111,7 @@ N		toggle map display.
 		WHITE: camera, ORANGE: camera switch,
 		RED: boundary, GREEN ARROW: you, BLUE: door.
 J		toggle model skeleton display.
+I		toggle bakground masks display.
 
 SPACE		refresh background, move player at current camera position
 U		Enter a door (only for RE2/RE3)
