--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+v 0.15
+
+- Preliminary support for background masks.
+
 v 0.14
 
 - Add separate clock for engine, so loading times are not taken into account
