Menu and player pos

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 v 0.16
 
 - Software renderer: Flush all 3D rendering before drawing 2D stuff.
+- Software renderer: Rewritten SBuffer implementation.
+- Added -fps parameter.
+- Added preliminary menu (display stage/room/camera and player pos).
 - Movie player: Updated for latest FFmpeg revision. Added separate project
   file for vs2005.
 
