--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+v 0.17
+
+- VS2005: Create configurations for ffmpeg, instead of separate project.
+
 v 0.16
 
 - Software renderer: Flush all 3D rendering before drawing 2D stuff.
