--- a/README
+++ b/README
@@ -109,6 +109,10 @@ T		previous model
 G		next model
 B		reset model
 
+K		previous animation
+L		next animation
+M		toggle animation (off/forward/backward)
+
 Y		toggle grid and origin display
 H		toggle background restoration display
 N		toggle map display.
@@ -118,7 +122,6 @@ N		toggle map display.
 J		toggle model skeleton display.
 I		toggle background masks display
 		(only for RE1 PC/PS1, RE2 PC demo, RE3 PC).
-K		toggle model animation (off/forward/backward)
 
 SPACE		refresh background, move player at current camera position
 U		Enter a door (only for RE2/RE3)
