--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+v 0.18
+
+- Add command line parameters for stage/room/camera.
+
 v 0.17
 
 - VS2005: Create configurations for ffmpeg, instead of separate project.
