--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,11 @@
-v 0.17
+v 0.18
 
-- VS2005: Create configurations for ffmpeg, instead of separate project.
-- Preliminary model animation.
+- Add command line parameters for stage/room/camera.
+- Moved each game in separate directories.
+- Moved each renderer in separate directories.
+- Better case-insensitive filenames management.
+- Remove gamma setting
+- Map: 2D and 3D display
 
 
 See ChangeLog for older changes.
