Change toggle perspective correction and rendering mode

--- a/README
+++ b/README
@@ -83,10 +83,8 @@ Use at your own risks.
 
 ESC		quit
 F1		screenshot
-F2		wireframe rendering for model
-F3		filled rendering for model
-F4		gouraud rendering for model
-F5		textured rendering for model
+F2		change rendering model (wireframe, filled, gouraud, textured)
+F3		change perspective correction (software renderer)
 F6		toggle between depth and color buffer
 F10		toggle menu on/off
 Alt+Enter	toggle between fullscreen and windowed mode.
