--- a/README
+++ b/README
@@ -22,8 +22,8 @@ Use at your own risks.
   http://www.libsdl.org/projects/SDL_image/
 
 - FFmpeg for movie player (optional, for movie player).
-  http://ffmpeg.mplayerhq.hu/
-  Unofficial win32 builds available at http://ffmpeg.arrozcru.org/
+  http://ffmpeg.org/
+  Win32 builds available at http://ffmpeg.zeranoe.com/builds/
 
 - PhysicsFS 2.x for all filesystem access (mandatory).
   http://www.icculus.org/physfs/
