--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ v 0.19
 - movie: fixed replay speed, updated for ffmpeg/libav changes,
   tested against libav. Replay also works in OpenGL now.
 - re3: scd: added more script intructions
+- scd: generate files from XML description.
 
 v 0.18
 
